

lib_LTLIBRARIES = libxtl.la
libxtl_la_SOURCES = xtl.cpp \
					datetime.cpp \
					crc32.cpp \
					random.cpp \
					ring_queue.cpp \
					trackable.cpp \
					delegate.cpp \
					mmap_vector.cpp \
					entry_manager.cpp \
					skiplist.cpp \
					iterator_adapter.cpp

pkginclude_HEADERS = xtl.hpp \
					 datetime.hpp \
					 crc32.hpp \
					 random.hpp \
					 ring_queue.hpp \
					 noncopyable.hpp \
					 trackable.hpp \
					 delegate.hpp \
					 mmap_vector.hpp \
					 entry_manager.hpp \
					 skiplist.hpp \
					 iterator_adapter.hpp

